apps/postgres/k8s/pgweb.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-pgweb
  namespace: postgres
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pgweb
  template:
    metadata:
      labels:
        app: postgres-pgweb
    spec:
      containers:
        - name: pgweb
          image: "ghcr.io/sosedoff/pgweb:0.17.0@sha256:a5256d416e2e8b92d69a4459058e3eca33a9f075d8325491644411d0bc3bd70b"
          ports:
            - name: http
              containerPort: 8081
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
