apps/postgres/k8s/db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
    - name: metrics
      port: 9187
      targetPort: metrics
      protocol: TCP
