apps/postgres/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postgres
  namespace: postgres
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
      sectionName: https
  hostnames:
    - postgres.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: postgres-pgweb
          port: 80
